[package]
name = "roccat-vulkan-rgb"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
evdev = "0.13.2"
hidapi = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
